Rename RPi Home System to RPi IoT Home

--- a/WebContent/WEB-INF/views/templates/fragments.html
+++ b/WebContent/WEB-INF/views/templates/fragments.html
@@ -6,7 +6,7 @@
 	<body>
 		<div >
 	      <header th:fragment="header">
-	        <h1 class="title">RPI Home System -  Web Control Panel</h1>
+	        <h1 class="title">RPI IoT Home -  Web Control Panel</h1>
 	      </header>     
 		</div>
 		<div>
