--- a/WebContent/WEB-INF/views/templates/fragments.html
+++ b/WebContent/WEB-INF/views/templates/fragments.html
@@ -6,27 +6,23 @@
 	<body>
 		<div >
 	      <header th:fragment="header">
-	        <h1 class="title">RPI IoT Home -  Web Control Panel</h1>
+	        <h1>RPi IoT Home System</h1>
 	      </header>     
 		</div>
 		<div>
 	      <nav th:fragment="nav">     
-		       <ul>
-		       <li><a th:href="@{/home}">Home</a></li>
-		        <li><a th:href="@{/weather}">Pogoda</a></li>
-		        <li><a th:href="@{/settings}">Opcje</a></li>
-		        <li sec:authorize="hasRole('ROLE_ADMIN')"> <a>Admin</a></li>
-		        <li style="float:right">
-			       <form name='f' th:action='@{/logout}' method='POST'> 
-			       	<input type="submit" value="Wyloguj" class="logout"/>
-			       </form>		        
-		        </li>
-		       </ul>
+		      <ul>
+		        <li class="left"><a th:href="@{/home}">Home</a></li>
+		        <li class="left"><a th:href="@{/weather}">Pogoda</a></li>
+		        <li class="left"><a th:href="@{/settings}">Opcje</a></li>
+		        <li class="left" sec:authorize="hasRole('ROLE_ADMIN')"><a>Admin</a></li>
+		        <li class="right"><a th:href="@{/logout}">Wyloguj</a></li>
+		      </ul>
 	      </nav>
 		</div>
 		<div >     
 	      <footer th:fragment="footer"> 
-	      	 &copy; 2017 Footer by Admin
+	      	 <h4>&copy; 2017 Footer by Admin</h4>
 	      </footer>
     </div>
 	</body>
