--- a/WebContent/WEB-INF/views/templates/home.html
+++ b/WebContent/WEB-INF/views/templates/home.html
@@ -2,21 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 	<head>
 	  <link rel="stylesheet" type="text/css" href="css/style.css" th:href="@{css/style.css}"/>
-		<title>RPI Home System - Pogoda</title>
+		<title>RPI Home System</title>
 	</head>
 	<body>
-		<div>
-		
       <header th:replace="fragments :: header">
       </header>
       <nav th:replace="fragments :: nav">     
       </nav>
-      <section>
-        <main> 
-			Witam w Raspberry Pi Home System Web Control Panel			
-        </main>
+      <section class="main">
+			RPi IoT Home System User Interface			
       </section>     
-        	<footer th:replace="fragments :: footer">...</footer>
-		</div>
+       <footer th:replace="fragments :: footer">...</footer>
 	</body>
 </html>
