--- a/WebContent/WEB-INF/views/templates/login.html
+++ b/WebContent/WEB-INF/views/templates/login.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-	<head>
-	  <link rel="stylesheet" type="text/css" href="css/style.css" th:href="@{/css/style.css}"/>
-		<title>RPI Home System - Registration</title>
-	</head>
-	<body onload='document.f.username.focus();'>
-		<div>
-      <header>
-        <h1 class="title">RPI Home System -  Web Control Panel</h1>
-      </header>
-      <nav>
-      	<h1 class="title">Logowanie</h1>
-      </nav>
-      <section>   
-      	<p th:if="${loginError}" class="error">Złe hasło lub login!!!!</p>  
-      	<form name='f' th:action='@{/login}' method='POST'> 
-        <label>Login</label>:<br />
-        <input type='text' id='username' name='username' value='' /><br />
-        <label>Haslo</label>:<br />
-        <input type='password' id='password' name='password'/><br />
-        <input name="submit" type="submit" value="Zaloguj" class="login"/><br />
-        <a th:href="@{/registration}">Zarejestruj</a>
-		</form>
-      </section>     
-      <footer> 
-      </footer>
-    </div>
-	</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css" th:href="@{/css/style.css}"/>
+  <title>RPi IoT Home System</title>
+  </head>
+  
+  <body onload='document.f.username.focus();'>         
+    <section class="loginPage">
+      <h1 class="loginPage">RPi IoT Home System</h1>
+      <h2 class="loginPage">Logowanie</h2>
+      <p th:if="${loginError}" class="error">Złe hasło lub login!!!!</p>
+      <p th:if="${userRegistered}" class="error">Zostales zarejestrowany. Teraz Administrator musi uaktywnic Twoje konto.</p>
+      <form  class="loginPage" name='f' th:action='@{/login}' method='POST'>
+        <label class="label">Login:</label><br />
+        <input class="text" type='text' id='username' name='username' value=''/><br />
+        <label class="label">Haslo:</label><br />
+        <input class="text" type='password' id='password' name='password'/><br />
+        <input class="submit" name="submit" type="submit" value="Zaloguj"/>
+      </form>
+      <a class="button" th:href="@{/registration}">Zarejestruj</a>
+    </section>     
+  </body>
 </html>
