--- a/WebContent/WEB-INF/views/templates/weather.html
+++ b/WebContent/WEB-INF/views/templates/weather.html
@@ -5,29 +5,31 @@
 		<title>RPI Home System - Pogoda</title>
 	</head>
 	<body>
-		<div>
       <header>
         <h1 class="title">RPI Home System -  Web Control Panel</h1>
       </header>     
       <nav th:replace="fragments :: nav">     
       </nav>
-      <section>
-        <main> 
-        	<p th:if="${inSensor.statusCode}!=200" class="error" th:text="'Poniższe dane dla czujnika wewnątrz mieszkania nie są aktualne.'"/>
-        	<p th:if="${inSensor.statusCode}!=200" class="error" th:text="'Ostatni poprawny pomiar: ' + ${inSensor.date} + '.  Kod błędu: ' + ${inSensor.statusCode}"/>
-        	<fieldset class="weather">
-		      	<legend>Wewnątrz</legend>
-		      	<p class="weather" th:text="${inSensor.temperature} +'&deg;C'"></p>
-		      	<p class="weather" th:text="${inSensor.pressure} + 'hPa'"></p>
-		      	<p class="weather" th:text="${inSensor.humidity} + '%'"></p>
-	      	</fieldset>
-        	<fieldset class="weather">
-		      	<legend>Na zewnątrz</legend>
-		      	Brak
-	      	</fieldset>	
-        </main>
-      </section>     
+	    <section class="main">
+	      <p th:if="${inSensor.statusCode}!=200" class="error" th:text="'Poniższe dane dla czujnika wewnątrz mieszkania nie są aktualne.'"/>
+	      <p th:if="${inSensor.statusCode}!=200" class="error" th:text="'Ostatni poprawny pomiar: ' + ${inSensor.date} + '.  Kod błędu: ' + ${inSensor.statusCode}"/>
+	      <div class="weather">
+	        <div class="inWeather">
+	          <h3>Wewnątrz</h3>
+	          <p class="temp" th:text="${inSensor.temperature} +'&deg;C'"></p>
+	          <p class="hum" th:text="${inSensor.pressure} + 'hPa'"></p>
+	        </div>
+	        <div class="outWeather">
+	          <h3>Na zewnątrz</h3>
+	            <p class="temp" th:text="${inSensor.temperature} +'&deg;C'"></p>
+	            <p class="hum" th:text="${inSensor.pressure} + 'hPa'"></p>
+	        </div>
+	        <div class="press">
+	          <h3>Ciśnienie</h3>
+	          <p class="hum" th:text="${inSensor.humidity} + '%'"></p>
+	        </div>
+	      </div>
+	    </section>   
 		<footer th:replace="fragments :: footer">...</footer>
-    </div>
 	</body>
 </html>
