--- a/WebContent/WEB-INF/views/templates/registration.html
+++ b/WebContent/WEB-INF/views/templates/registration.html
@@ -10,6 +10,7 @@
 	      <h1 class="loginPage">RPi IoT Home System</h1>
 	      <h2 class="loginPage">Rejestacja</h2>    
 	      <p th:if="${userExisted}" class="error">Podany użytkownik już istnieje.</p> 
+	      <p th:if="${userEmailError}" class="error">Wprowadz poprawy adres email.</p>
 	      <p th:if="${userRegisteredError}" class="error">Nie zostały uzupełnione wszystkie wymagane pola: Login i Hasło.</p>
 	      <form th:action="@{/registration}" method="POST" th:object="${user}" class="loginPage"> 
 	        <label class="label">Login</label>:<br /> 
