--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="EmbeddedApplication">
-                
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
-                
-        <property name="context-root" value="EmbeddedApplication"/>
-                
-        <property name="java-output-path" value="/EmbeddedApplication/bin"/>
             
-    </wb-module>
     
+    <wb-module deploy-name="EmbeddedApplication">
+                        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
+        <wb-resource deploy-path="/" source-path="/WebContent"/>
+                        
+        
+        <property name="context-root" value="EmbeddedApplication"/>
+                        
+        
+        <property name="java-output-path" value="/EmbeddedApplication/bin"/>
+                    
+    
+    </wb-module>
+        
+
 </project-modules>
