--- a/WebContent/WEB-INF/views/templates/home.html
+++ b/WebContent/WEB-INF/views/templates/home.html
@@ -9,8 +9,8 @@
       </header>
       <nav th:replace="fragments :: nav">     
       </nav>
-      <section class="main">
-			RPi IoT Home System User Interface			
+      <section class="main">	
+			<img class="logoHome" th:src="@{img/logo.png}" />		
       </section>     
        <footer th:replace="fragments :: footer">...</footer>
 	</body>
