--- a/WebContent/WEB-INF/views/templates/registration.html
+++ b/WebContent/WEB-INF/views/templates/registration.html
@@ -11,6 +11,7 @@
 	      <h2 class="loginPage">Rejestacja</h2>    
 	      <p th:if="${userExisted}" class="error">Podany użytkownik już istnieje.</p> 
 	      <p th:if="${userEmailError}" class="error">Wprowadz poprawy adres email.</p>
+	      <p th:if="${passLengthError}" class="error">Hasło powinno zawierać nie mniej niz 8 i nie więcej niż 40 znaków.</p>
 	      <p th:if="${userRegisteredError}" class="error">Nie zostały uzupełnione wszystkie wymagane pola: Login i Hasło.</p>
 	      <form th:action="@{/registration}" method="POST" th:object="${user}" class="loginPage"> 
 	        <label class="label">Login</label>:<br /> 
