--- a/WebContent/WEB-INF/views/templates/weather.html
+++ b/WebContent/WEB-INF/views/templates/weather.html
@@ -28,8 +28,8 @@
 	        </div>
 	        <div class="press">
 	          <h3>Ciśnienie</h3>
-	          <p class="hum" th:text="${inSensor.pressure} + 'hPa'"></p>
-	          <p class="actT" th:text="'Akt.: ' + ${inSensor.date}"></p>
+	          <p class="hum" th:text="${outSensor.pressure} + 'hPa'"></p>
+	          <p class="actT" th:text="'Akt.: ' + ${outSensor.date}"></p>
 	        </div>
 	      </div>
 	      
